--- a/index.html
+++ b/index.html
@@ -51,13 +51,15 @@
           <button class="features-card__btn blue-btn">Download for Mac</button>
         </div>
       </article>
-      <article class="features-card">
-        <h2 class="features-card__title h2">Keep track of your snippets</h2>
-        <p class="features-card__paragraph">
-          Clipboard instantly stores any item you copy in the cloud, meaning you
-          can access your snippets immediately on all your devices. Our Mac and
-          iOS apps will help you organize everything.
-        </p>
+      <div class="computer-img-grid">
+        <article class="features-card first-row">
+          <h2 class="features-card__title h2">Keep track of your snippets</h2>
+          <p class="features-card__paragraph">
+            Clipboard instantly stores any item you copy in the cloud, meaning
+            you can access your snippets immediately on all your devices. Our
+            Mac and iOS apps will help you organize everything.
+          </p>
+        </article>
         <img
           class="img-computer"
           src="images/image-computer.png"
@@ -65,28 +67,28 @@
           width="752"
           height="572"
         />
-      </article>
-      <div class="features-card__flex-box">
-        <article class="features-card">
-          <h3 class="features-card__title h3">Quick Search</h3>
-          <p class="features-card__paragraph">
-            Easily search your snippets by content, category, web address,
-            application, and more.
-          </p>
-        </article>
-        <article class="features-card">
-          <h3 class="features-card__title h3">iCloud Sync</h3>
-          <p class="features-card__paragraph">
-            Instantly saves and syncs snippets across all your devices.
-          </p>
-        </article>
-        <article class="features-card">
-          <h3 class="features-card__title h3">Complete History</h3>
-          <p class="features-card__paragraph">
-            Retrieve any snippets from the first moment you started using the
-            app.
-          </p>
-        </article>
+        <div class="features-card__flex-box">
+          <article class="features-card">
+            <h3 class="features-card__title h3">Quick Search</h3>
+            <p class="features-card__paragraph">
+              Easily search your snippets by content, category, web address,
+              application, and more.
+            </p>
+          </article>
+          <article class="features-card">
+            <h3 class="features-card__title h3">iCloud Sync</h3>
+            <p class="features-card__paragraph">
+              Instantly saves and syncs snippets across all your devices.
+            </p>
+          </article>
+          <article class="features-card">
+            <h3 class="features-card__title h3">Complete History</h3>
+            <p class="features-card__paragraph">
+              Retrieve any snippets from the first moment you started using the
+              app.
+            </p>
+          </article>
+        </div>
       </div>
       <article class="features-card">
         <h2 class="features-card__title h2">Access Clipboard anywhere</h2>
