--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h1 class="features-card__title h1">
           A history of everything you copy
         </h1>
-        <p class="features-card__paragraph">
+        <p class="features-card__paragraph p-padding-large">
           Clipboard allows you to track and organize everything you copy.
           Instantly access your clipboard on all your devices.
         </p>
@@ -54,7 +54,7 @@
       <div class="computer-img-grid">
         <article class="features-card first-row">
           <h2 class="features-card__title h2">Keep track of your snippets</h2>
-          <p class="features-card__paragraph">
+          <p class="features-card__paragraph p-small p-padding-large">
             Clipboard instantly stores any item you copy in the cloud, meaning
             you can access your snippets immediately on all your devices. Our
             Mac and iOS apps will help you organize everything.
@@ -69,21 +69,21 @@
         />
         <div class="features-card__flex-box">
           <article class="features-card">
-            <h3 class="features-card__title h3">Quick Search</h3>
-            <p class="features-card__paragraph">
+            <h3 class="features-card__title h3 position-start">Quick Search</h3>
+            <p class="features-card__paragraph p-very-small position-start">
               Easily search your snippets by content, category, web address,
               application, and more.
             </p>
           </article>
           <article class="features-card">
-            <h3 class="features-card__title h3">iCloud Sync</h3>
-            <p class="features-card__paragraph">
+            <h3 class="features-card__title h3 position-start">iCloud Sync</h3>
+            <p class="features-card__paragraph p-very-small position-start">
               Instantly saves and syncs snippets across all your devices.
             </p>
           </article>
           <article class="features-card">
-            <h3 class="features-card__title h3">Complete History</h3>
-            <p class="features-card__paragraph">
+            <h3 class="features-card__title h3 position-start">Complete History</h3>
+            <p class="features-card__paragraph p-very-small position-start">
               Retrieve any snippets from the first moment you started using the
               app.
             </p>
@@ -92,7 +92,7 @@
       </div>
       <article class="features-card">
         <h2 class="features-card__title h2">Access Clipboard anywhere</h2>
-        <p class="features-card__paragraph">
+        <p class="features-card__paragraph p-small p-padding-large">
           Whether you're on the go, or at your computer, you can access all your
           Clipboard snippets in a few simple clicks.
         </p>
@@ -104,9 +104,9 @@
           height="575"
         />
       </article>
-      <article class="features-card">
+      <article class="features-card supercharge">
         <h2 class="features-card__title h2">Supercharge your workflow</h2>
-        <p>We've got the tools to boost your productivity.</p>
+        <p class="p-small">We've got the tools to boost your productivity.</p>
       </article>
       <div class="features-card__flex-box-tools">
         <article class="features-card">
@@ -118,7 +118,7 @@
             height="40"
           />
           <h3 class="features-card__title h3">Create blacklists</h3>
-          <p class="features-card__paragraph">
+          <p class="features-card__paragraph p-very-small">
             Ensure sensitive information never makes its way to your clipboard
             by excluding certain sources.
           </p>
@@ -132,7 +132,7 @@
             height="32"
           />
           <h3 class="features-card__title h3">Plain text snippets</h3>
-          <p class="features-card__paragraph">
+          <p class="features-card__paragraph p-very-small">
             Remove unwanted formatting from copied text for a consistent look.
           </p>
         </article>
@@ -145,7 +145,7 @@
             height="32"
           />
           <h3 class="features-card__title h3">Sneak preview</h3>
-          <p class="features-card__paragraph">
+          <p class="features-card__paragraph p-very-small">
             Quick preview of all snippets on your Clipboard for easy access.
           </p>
         </article>
@@ -194,7 +194,7 @@
       </div>
       <article class="features-card">
         <h2 class="features-card__title h2">Clipboard for iOS and Mac OS</h2>
-        <p class="features-card__paragraph">
+        <p class="features-card__paragraph p-small p-padding-large">
           Available for free on the App Store. Download for Mac or iOS, sync
           with iCloud and you're ready to start adding to your clipboard.
         </p>
@@ -219,15 +219,15 @@
       <a class="footer__link" href="/guide">Install Guide</a>
       <div class="footer__social-media-flex">
         <a class="footer__link icon" href="https://facebook.com">
-          <img src="images/icon-facebook.svg" alt="" width="24" height="24" />
+          <img class="footer__link-icon" src="images/icon-facebook.svg" alt="" width="24" height="24" />
           <span class="visually-hidden">Facebook</span>
         </a>
         <a class="footer__link icon" href="https://twitter.com">
-          <img src="images/icon-twitter.svg" alt="" width="24" height="20" />
+          <img class="footer__link-icon" src="images/icon-twitter.svg" alt="" width="24" height="20" />
           <span class="visually-hidden">Twitter</span>
         </a>
         <a class="footer__link icon" href="https://instargam.com">
-          <img src="images/icon-instagram.svg" alt="" width="24" height="24" />
+          <img class="footer__link-icon" src="images/icon-instagram.svg" alt="" width="24" height="24" />
           <span class="visually-hidden">Instagram</span>
         </a>
       </div>
